syntax = "proto3";
option java_package = "proto";
//option java_multiple_files = true;

package proto;
import "types.proto";

service Wrb {
    rpc DisseminateMessage(BlockHeader) returns (Empty) {};
    rpc reqMessage(WrbReq) returns (WrbRes) {};
}
